--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
           <h1><span><</span>Portfolio<span>/></span></h1>
         </a>
         <div class="toogle-div">
-          <img src="img/menu.svg" alt="toggle" />
+          <img src="img/menu.svg" alt="toggle" id="toggle-img"/>
         </div>
-        <div class="right-nav">
-          <a href="#">About</a>
+        <div class="right-nav" id="right-nav-div">
+          <a href="#about-div">About</a>
           <a href="#project-section">Projects</a>
           <a href="#skills-section">Skills</a>
-          <a href="#">Contact</a>
+          <a href="#footer">Contact</a>
         </div>
       </div>
     </nav>
     <main>
-      <div class="main-div">
+      <div class="main-div" id="about-div">
         <div class="profile-pic-div">
           <img src="img/me-latest.jpg" alt="pic" />
         </div>
@@ -132,7 +132,7 @@
         </h3>
       </section>
     </main>
-    <footer>
+    <footer id="footer">
       <!-- <h2>Contact me</h2> -->
       <div class="contact-div">
         <div class="footer-dialog">
@@ -165,5 +165,6 @@
         </div>
       </div>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
