changed resume link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1><span><</span>Portfolio<span>/></span></h1>
         </a>
         <div class="toogle-div">
-          <img src="img/menu.svg" alt="toggle" id="toggle-img"/>
+          <img src="img/menu.svg" alt="toggle" id="toggle-img" />
         </div>
         <div class="right-nav" id="right-nav-div">
           <a href="#about-div">About</a>
@@ -39,7 +39,7 @@
           <div class="resume-div">
             <!-- <a href="https://github.com/">GitHub</a> -->
             <a
-              href="C:\Users\taufe\OneDrive\Desktop\my-portfolio\docs\Resume.pdf"
+              href="https://drive.google.com/file/d/1N4sXiaLpfbfOmTOwA2vawfQp3ovbMRAI/view?usp=sharing"
               download="taufeeq_resume.pdf"
               >Download CV</a
             >
