updated live links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 >
                   <button type="button">GitHub</button>
                 </a>
-                <a href="https://hive-tech-wear-frontend.khantaufeeq.repl.co/">
+                <a href="https://taufeeq-hive-tech-wear.netlify.app/">
                   <button type="button">Live Link</button>
                 </a>
               </div>
@@ -93,7 +93,7 @@
                 <a href="https://github.com/KhanTaufeeq/Budget-Box">
                   <button type="button">GitHub</button>
                 </a>
-                <a href="https://budgetboxfrontend.khantaufeeq.repl.co/">
+                <a href="https://taufeeq-budgetbox.netlify.app/">
                   <button type="button">Live Link</button>
                 </a>
               </div>
