updated cv and project links

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <div class="resume-div">
             <!-- <a href="https://github.com/">GitHub</a> -->
             <a
-              href="https://drive.google.com/file/d/128G2AVcNMwA_WhFMUQHU57yjW5hFLCgz/view?usp=sharing"
-              download="taufeeq_resume.pdf"
+              href="https://drive.google.com/file/d/1wy1wLjyYL0batCEgObGfd17xpgfourHD/view?usp=sharing"
+              download="myResume.pdf"
               >Download CV</a
             >
           </div>
@@ -59,7 +59,7 @@
                 >
                   <button type="button">GitHub</button>
                 </a>
-                <a href="https://taufeeq-hive-tech-wear.netlify.app/">
+                <a href="https://hive-tech.netlify.app/">
                   <button type="button">Live Link</button>
                 </a>
               </div>
@@ -90,10 +90,10 @@
             <div class="project-vid">
               <video src="./videos/React App.mp4" autoplay muted></video>
               <div class="link-icons">
-                <a href="https://github.com/KhanTaufeeq/Budget-Box">
+                <a href="https://github.com/KhanTaufeeq/budget-box">
                   <button type="button">GitHub</button>
                 </a>
-                <a href="https://taufeeq-budgetbox.netlify.app/">
+                <a href="https://taufeeq-budget-box.netlify.app/">
                   <button type="button">Live Link</button>
                 </a>
               </div>
